--- a/index.html
+++ b/index.html
@@ -11,24 +11,87 @@
         <link href="https://fonts.googleapis.com/css2?family=Sriracha&family=Zeyada&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="introduction-container">
+        <div class="ic-container">
             <h1 class="heading">STRAWBERRY GARDEN</h1>
             <div class="rounded-box">WATASHI NO AINOTAMENI</div>
         </div>
         <div class="part-1-container">
             <h2 class="part-1-header">DAY 1</h2>
             <p>
-                I can admit that I never expected to go through what I did; to become <em> who </em> I did without you.
-            </p>
-            <p>
+                I can admit that I never expected to go through what I did; to become <em> who </em> <br>I did without you. 
+                I know that I'm truly the worst at words but I'm going to try anyway. <br><br>
                 
+                I never thought I’d find a connection as sweet as ours, <br>
+                Like discovering the first ripe strawberry in spring. <br>
+                It’s no exaggeration especially given my withered seasons <br>
+                hat I cherished our moments, even before our words began to bloom. <br>
+                You were something rare, rich, and fulfilling; A sweetness I hadn’t tasted in so long. <br>
+                The joy of sharing you with others felt like tending a secret garden, <br>
+                Something beautiful I was proud to nurture. <br>
+                So thank you, for all that you are and all we grew together. <br>
+                I’ll never forget the roots we planted, our beginning or our end— <br>
+                For you are forever entwined in me, <br>
+                And you’ll always belong to this heart, my ever-blooming strawberry garden.
             </p>
         </div>
         <div class="part-2-container">
-            <h2 class="part-2-header">DAY 80</h2>
+            <h2 class="part-2-header">DAY 135</h2>
+            <p>
+                I felt indifferent to the withering of us, to the falling of our fruit. <br>
+                I hated you, hated us. Yet, I longed for you, longed for us. <br>
+                More than anything, I despised myself, but I loathed this barren field <br> 
+                where everything once flourished and where I now missed the sweetness just as much <br> as I mourned it.  
+            </p>
+            <table>
+                <td>
+                    <b>I resented the</b> <br>
+                    &emsp; way you neglected the garden we grew. <br>
+                    &emsp; way you left our love to die. <br>
+                    &emsp; how much pain your absence sowed. <br>
+                    &emsp; how much I let myself endure. <br>
+                    &emsp; day you walked away. <br>
+                    &emsp; emptiness left behind. <br>
+                    &emsp; how deeply I cared for you. <br>
+                    &emsp; how much I yearned for your care in return. <br>
+                </td>
+                <td>
+                    <b>I longed for the</b> <br>
+                    &emsp; bloom of being with you. <br>
+                    &emsp; joy of being us. <br>
+                    &emsp; bond we once cultivated. <br>
+                    &emsp; laughter that danced among our vines. <br>
+                    &emsp; conversations that flowed like streams. <br>
+                    &emsp; moments we shared in sunlight. <br>
+                    &emsp; way you made my heart blossom. <br>
+                    &emsp; memories we planted together. <br>
+                </td>
+            </table>
+            <p>I <del>longed for</del> <del>resented</del> <strong>loved</strong> you more than words could capture. All I wanted was you.</p>
+            
         </div>
         <div class="part-3-container">
-            <h2 class="part-3-header">DAY 365</h2>
+            <h2 class="part-3-header">DAY 240</h2>
+            <p>
+                Seeing you again in our once treasured yet withering garden made my heart stop. <br>
+                I couldn't possibly grasp why we were conversing now but I didn't despise it either. <br>
+                Yet in my interest to mend the bond that was broken, the resentment I held surfaced once more. <br>
+                It was fiery and seething, <br>
+                I was livid and anxious. <br>
+                But you were still and understanding. <br>
+                Like a tree in the wind, you listened to my woes and unlike the rest, understood the root of my pain. <br>
+                I was.. <strong>stubborn</strong>, <strong>aggressive</strong> and a little bit <strong>cagey</strong> 
+                but you still came back.. you still stayed.. with me. <br><br>
+                We sat and planted new memories with stronger vines to craddle our laughter and intimate language <br>
+                trickling through sprinklers. We rebuilt this garden from the ground up and I'd do it again if only <br>
+                to be with you. And though we kept distance for quite some time, I'd never stop yearning, <br> 
+                longing for your return. I miss you, I love you. <br>
+                I love you.
+            </p>
+        </div>
+        <div class="ic-container">
+            <h1 class="heading">HAPPY VALENTINE'S DAY</h1>
+            <div class="rounded-box">YES</div>
+            <div class="rounded-box">NO</div>
         </div>
         <link rel="stylesheet" href="style.css">
     </body>
